# goal-composition

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_gpu_snapshot.txt  requirements_jax_gpu.txt  requirements_no_jax.txt  setup_gpu_instance.sh  x_minigrid_plr.py  x_minigrid_remidi.py
ablations/: __init__.py
ablations/agents/: __init__.py  accel_probe.py  base.py  context_vector.py  episodic_memory.py  next_env_prediction.py  paired_accel_probe.py  paired_base.py  paired_context_vector.py  paired_episodic_memory.py  paired_next_env_prediction.py  paired_persistent_lstm.py  persistent_lstm.py
ablations/common/: __init__.py  curriculum_state.py  environment.py  metrics.py  networks.py  probe_runner.py  training.py  types.py  utils.py  visualization.py
ablations/configs/: README.md  __init__.py  presets.py
ablations/experiments/: __init__.py  activation_analysis.py  base.py  behavioral_coupling.py  causal_intervention.py  counterfactual.py  cross_agent_comparison.py  cross_episode_flow.py  dr_coverage.py  goal_extraction.py  level_probing.py  mutation_adaptation.py  n_env_prediction.py  n_step_prediction.py  output_probing.py  phase_transition.py  run_all.py  run_experiment.py  run_paired_suite.py  symbolic_regression.py  value_calibration.py
ablations/memory/: __init__.py  context_vector.py  episodic_buffer.py  persistent_rnn.py  reset_rnn.py
ablations/scripts/: evaluate.py  train.py  train_all.py  (+1 more)
core/: utils.py
docs/: research_strategy.tex
elicting-world-models/: accel_minigrid_cwm.py
elicting_world_models/: accel_minigrid_cwm.py
misgeneralisation/: keys_chests_accel.py
originals/: original_accel.py  original_dr.py  original_paired.py
scalable_oversight/: accel_probe.py  nep_dr.py  next_env_prediction.py  prediction_head_ablations.py
(+65 files in other folders)
