[project]
name = "goal-composition"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "absl-py>=2.3.1",
    "appdirs>=1.4.4",
    "certifi>=2025.11.12",
    "charset-normalizer>=3.4.4",
    "chex>=0.1.91",
    "click>=8.3.1",
    "cloudpickle>=3.1.2",
    "contourpy>=1.3.3",
    "cycler>=0.12.1",
    "decorator>=5.2.1",
    "distrax>=0.1.7",
    "dm-tree>=0.1.9",
    "docker-pycreds>=0.4.0",
    "etils>=1.13.0",
    "flax==0.8.1",
    "fonttools>=4.60.1",
    "fsspec>=2025.10.0",
    "gast>=0.6.0",
    "gitdb>=4.0.12",
    "gitpython>=3.1.45",
    "gym>=0.26.2",
    "gym-notices>=0.1.0",
    "gymnax>=0.0.9",
    "idna>=3.11",
    "importlib-resources>=6.5.2",
    "jax==0.4.23",
    "jaxlib==0.4.23",
    "kiwisolver>=1.4.9",
    "markdown-it-py>=4.0.0",
    "matplotlib>=3.10.7",
    "mdurl>=0.1.2",
    "ml-dtypes>=0.5.4",
    "msgpack>=1.1.2",
    "nest-asyncio>=1.6.0",
    "numpy>=2.3.5",
    "opt-einsum>=3.4.0",
    "optax>=0.2.6",
    "orbax-checkpoint==0.4.8",
    "packaging>=25.0",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "protobuf>=6.33.1",
    "psutil>=7.1.3",
    "pygame>=2.6.1",
    "pygments>=2.19.2",
    "pyparsing>=3.2.5",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "scipy>=1.16.3",
    "sentry-sdk>=2.45.0",
    "setproctitle>=1.3.7",
    "setuptools>=80.9.0",
    "six>=1.17.0",
    "smmap>=5.0.2",
    "tensorflow-probability>=0.25.0",
    "tensorstore>=0.1.79",
    "toolz>=1.1.0",
    "typing-extensions>=4.15.0",
    "tzdata>=2025.2",
    "urllib3>=2.5.0",
    "wandb>=0.23.0",
    "wheel>=0.45.1",
    "zipp>=3.23.0",
]
